--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "app/templates/jalt"]
-	path = app/templates/jalt
-	url = https://github.com/dbankier/JALT
+[submodule "app/templates/jast"]
+	path = app/templates/jast
+	url = https://github.com/dbankier/JAST
